# bachelor-thesis

./: .gitignore  README.md
bachelor-python-util/: .gitignore  README  main.py
bachelor-python-util/BachelorPythonUtilLib/: File.py  Signal.py  Stokes.py
bachelor-python-util/figures/: light3D.py  polarisation.py
bachelor-python-util/files/: Test_3(Audio_Synched).m4a
bachelor-python-util/src/: run-tests.py
convolution-analysis/: README.md  simple_fft_filter.py
data/: stokes.csv
pm1000-streamer-service/: Program.cs  README.md  pm1000-streamer-service.csproj  pm1000-streamer-service.sln
pm1000-streamer-service/Helper/: Clock.cs  ConfigurationBuilder.cs  DeviceInfoWrapper.cs  FtdiService.cs  Logger.cs  Retriever.cs
pm1000-visualizer/: .gitignore  App.xaml  App.xaml.cs  DeviceInfoWrapper.cs  FtdiService.cs  Logger.cs  MainWindow.xaml  MainWindow.xaml.cs  PM1000Service.cs  README.md  nuget.config  pm1000-visualizer.csproj  pm1000-visualizer.sln
pm1000-visualizer/Communication/: PacketDeserializer.cs  StokeSample.cs  StreamerApiClient.cs  UdpListener.cs
pm1000-visualizer/Documents/: udp_diagnostic.ps1
pm1000-visualizer/Helper/: FtdiService.cs  PM1000Service.cs
signal-processing/: .gitignore  Cargo.toml
signal-processing/Documents/: integration-guide.md
signal-processing/example_data/: polarimeter_recording_440Hz_0.txt  polarimeter_recording_440Hz_1.txt
signal-processing/src/: main.rs  signal_processing.rs  udp_sender.rs
signal-processing/src/streaming/: listener.rs  mod.rs  sender.rs
speaker/: .gitignore  Program.cs
(+58 files in other folders)
